// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trae -> defaults returns the current default config when no params are passed 1`] = `
Object {
  "headers": Object {},
  "patch": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
  "post": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
  "put": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
}
`;

exports[`trae -> defaults sets the default config to be used on all requests for the instance 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {},
  "mode": "no-cors",
  "patch": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
  "post": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
  "put": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
  },
}
`;
